--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -8,7 +8,7 @@
     xmlns:chart="using:Syncfusion.UI.Xaml.Charts"
     mc:Ignorable="d">
     <ScrollViewer>
-        <Grid  Name="mainGrid" Margin="10,0,30,0" >
+        <Grid  Name="mainGrid" >
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height ="40"></RowDefinition>
@@ -19,11 +19,11 @@
             <RowDefinition Height ="40"></RowDefinition>
             <RowDefinition Height ="50"></RowDefinition>
             <RowDefinition Height ="35"></RowDefinition>
-                <RowDefinition Height ="40"></RowDefinition>
-                <RowDefinition Height ="40"></RowDefinition>
-                <RowDefinition Height ="40"></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+            <RowDefinition Height ="40"></RowDefinition>
+            <RowDefinition Height ="40"></RowDefinition>
+            <RowDefinition Height ="40"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
@@ -38,25 +38,24 @@
         <Grid.DataContext>
             <local:LineChartViewModel/>
         </Grid.DataContext>
-        
-        <TextBlock Text="Tool heating" Grid.Row="1" HorizontalAlignment="Left"></TextBlock>
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="ON" Foreground="Red"></TextBlock>
-        <TextBlock Text="Running mode" Grid.Row="0" HorizontalAlignment="Left"></TextBlock>
-        
-        <ComboBox Grid.Row="0" Grid.Column="1" SelectionChanged="NewModeSelected">
+
+        <TextBlock  Grid.Row="0" Text="Operation" FontWeight="Bold" VerticalAlignment="Bottom"></TextBlock>
+        <TextBlock Text="Running mode" Grid.Row="1" HorizontalAlignment="Left"></TextBlock>
+        <ComboBox Grid.Row="1" Grid.Column="1" SelectionChanged="NewModeSelected">
             <ComboBoxItem IsSelected="True" Content="Idle"></ComboBoxItem>
             <ComboBoxItem Content="Heating"></ComboBoxItem>
             <ComboBoxItem Content="Cooling"></ComboBoxItem>
             <ComboBoxItem Content="Fixed Cycling"></ComboBoxItem>
             <ComboBoxItem Content="Auto with IMM"></ComboBoxItem>
         </ComboBox>
-        
-        <TextBlock Grid.Row="2"  FontWeight="Bold" Text="Set Moulding Parameters"></TextBlock>
+        <TextBlock Text="Tool tempering" Grid.Row="2" HorizontalAlignment="Left"></TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="HEAT" Foreground="Red"></TextBlock>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="3" >
+        <TextBlock Grid.Row="3"  FontWeight="Bold" Text="Moulding parameters" VerticalAlignment="Bottom"></TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Row="4" >
                 <TextBlock VerticalAlignment="Bottom" Text="Tank temperature"></TextBlock>
                 <TextBlock VerticalAlignment="Bottom" Name="TextCorF"></TextBlock>
-            </StackPanel>
+         </StackPanel>
             <StackPanel Grid.Row="4"  VerticalAlignment="Bottom" Grid.Column="1" Orientation="Horizontal">
                 <TextBlock Margin="5,0,0,0"  Text="T"></TextBlock>
                 <TextBlock Margin="1,7,0,0" FontSize="11" Text="Actual "></TextBlock>
@@ -84,32 +83,32 @@
 
         <TextBlock Grid.Row="7" VerticalAlignment="Bottom" Text="Cycle times (s/cycle)"></TextBlock>
                      
-        <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+        <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
                 <TextBlock Margin="1,0,0,0"  Text="Active"></TextBlock>
                 <TextBlock Margin="35,0,0,0" Text="Pause"></TextBlock>
         </StackPanel>
         
         <Slider Grid.Row="5" Grid.Column="2" Value="25" Maximum="100" Visibility="Collapsed"></Slider>
       
-        <TextBlock Grid.Row="9"  VerticalAlignment="Bottom" Text="Heating"></TextBlock>
-        <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+        <TextBlock Grid.Row="8"  VerticalAlignment="Bottom" Text="Heating"></TextBlock>
+        <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
             <TextBox VerticalAlignment="Bottom" Text="26"></TextBox>
             <TextBox Margin="15,0,0,0" Text="25"></TextBox>
         </StackPanel>
         <Slider Grid.Row="6" Grid.Column="2" Value="27" Maximum="100" Visibility="Collapsed"></Slider>
        
-        <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Cooling"></TextBlock>
-        <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+        <TextBlock Grid.Row="9" VerticalAlignment="Bottom" Text="Cooling"></TextBlock>
+        <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
             <TextBox VerticalAlignment="Bottom" Text="24"></TextBox>
             <TextBox Margin="15,0,0,0" Text="20"></TextBox>
         </StackPanel>
         <Slider Grid.Row="7" Grid.Column="2" Value="21" Maximum="100" Visibility="Collapsed"></Slider>
-          
-             
+
+        <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Monitoring" FontWeight="Bold"></TextBlock>     
        
 
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3">
-                <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return (s)</TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2">
+                <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return</TextBlock>
         </StackPanel>
        <!-- <TextBlock Grid.Row="1" Grid.Column="4" Margin="0,0,0,0" > Feed - Return (s)</TextBlock> -->
             
@@ -118,20 +117,22 @@
             <TextBlock VerticalAlignment="Bottom"  Margin="30,0,0,0" Grid.Row="3" Grid.Column="3" Text="Hot pump"></TextBlock>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,30,0" Grid.Row="3" Grid.Column="4">
                 <TextBlock  VerticalAlignment="Bottom" Margin="0,0,0,0" Text="8"></TextBlock>
-                <TextBlock  VerticalAlignment="Bottom" Margin="15,0,0,0" Text="+"></TextBlock>
+                <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
                 <TextBox VerticalAlignment="Bottom" Margin="10,0,0,0" Text="2"></TextBox>
-                <TextBlock  VerticalAlignment="Bottom" Margin="20,0,0,0" Text="="></TextBlock>
-                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="10"></TextBlock>
+                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
+                <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="10"></TextBlock>
+                <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
         </StackPanel>
 
             <TextBlock  Margin="30,0,0,0" VerticalAlignment="Bottom" Grid.Row="4" Grid.Column="3" Text="Cold pump"></TextBlock>
         <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,0" Grid.Row="4" Grid.Column="4">
                 <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,0" Text="10"></TextBlock>
-                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="+"></TextBlock>
-                <TextBox Margin="10,0,0,0" VerticalAlignment="Bottom" Text="2"></TextBox>
-                <TextBlock  VerticalAlignment="Bottom" Margin="20,0,0,0" Text="="></TextBlock>
-                <TextBlock  Margin="10,0,0,0" VerticalAlignment="Bottom" Text="12"></TextBlock>
-        </StackPanel>
+                <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
+                <TextBox Margin="10,0,0,0" VerticalAlignment="Bottom" Text="3"></TextBox>
+                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
+                <TextBlock  Margin="5,0,0,0" VerticalAlignment="Bottom" Text="12"></TextBlock>
+                <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
+            </StackPanel>
 
 
             <chart:SfChart  
@@ -142,12 +143,12 @@
             IsDoubleTapEnabled="True"   
             DoubleTapped="FreezeDelayChart"
             Margin="20,0,0,0">
-                <chart:SfChart.PrimaryAxis>
-                    <chart:TimeSpanAxis ></chart:TimeSpanAxis>
+                <chart:SfChart.PrimaryAxis> 
+                    <chart:TimeSpanAxis Name="OperatorDelayXAxis" ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
 
                 <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Name="MyYAxis" Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
@@ -214,34 +215,58 @@
             
         </chart:SfChart>
 
+        <!-- overlay own text as labels for chart -->
+            <StackPanel Orientation="Vertical" Grid.Row="11" Grid.RowSpan="6">
+                <TextBlock Margin="2,30,0,0" FontSize="8" Text="Unknown"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WOpenEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WEjectEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WEjectBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WOpenBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WCoolingEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WInjectionEnd" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WInjectionBegin" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WColdAtMEntry" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="WHotAtMEntry" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="Idle" FontSize="8"></TextBlock>
+                <TextBlock Margin="2,10,0,0" Text="Initial" FontSize="8"></TextBlock>
+            </StackPanel>    
+            
         <chart:SfChart  
             Header="AOU / IMM Interaction"
             Grid.Row="11"
             Grid.RowSpan="6"
             Grid.ColumnSpan="2"
-            Margin="20,10,0,0">
-            <chart:SfChart.PrimaryAxis>
-                <chart:TimeSpanAxis EnableAutoIntervalOnZooming="False"></chart:TimeSpanAxis>
+            Margin="30,10,0,0">
+                <chart:SfChart.Behaviors>
+                    <chart:ChartTrackBallBehavior></chart:ChartTrackBallBehavior>
+                </chart:SfChart.Behaviors>
+                <chart:SfChart.PrimaryAxis>
+                <chart:TimeSpanAxis ShowTrackBallInfo="True" ShowGridLines="True" EnableAutoIntervalOnZooming="False"></chart:TimeSpanAxis>
             </chart:SfChart.PrimaryAxis>
             <chart:SfChart.SecondaryAxis>
-                <chart:NumericalAxis Interval="1" PlotOffset="50" ContentPath="RunState" PositionPath="Position" LabelsSource="{Binding power}">
+               
+                <chart:NumericalAxis Interval="1" Minimum="0" Maximum="12" LabelsPosition="Inside">
                     
                 </chart:NumericalAxis>
+                
             </chart:SfChart.SecondaryAxis>
+                
             <chart:StepLineSeries Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:StepLineSeries>
         </chart:SfChart>
+            
 
             <chart:SfChart  
             Header="Buffer tank Volume balance"
             Grid.Row="6"
             Grid.RowSpan="5"
-            Grid.Column="2"
+            Grid.Column="3"
+            Grid.ColumnSpan="2"    
             Margin="20,0,0,0">
                 <chart:SfChart.PrimaryAxis>
                     <chart:TimeSpanAxis ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
                 <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Minimum="0" Interval="20" Maximum="300" EnableAutoIntervalOnZooming="False">
@@ -252,8 +277,11 @@
                 </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
                     <chart:HorizontalLineAnnotation Name="PhaseHLine1"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="3" Fill="Chocolate" CoordinateUnit="Axis" Y1="150"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" Width="4" Fill="DarkOrange" CoordinateUnit="Axis" Y1="90"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" Width="4" Fill="DarkOrange" CoordinateUnit="Axis" Y1="40"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLineTBM" CanDrag="True"  DragCompleted="PhaseLineTBM_Dragged" Width="4" Fill="DarkOrange" CoordinateUnit="Axis" Y1="90"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
+                <!-- Want to show a trendline for the mid buffer temperature could not find howto -->
+
                 <chart:LineSeries LegendIcon="Diamond" Label="TBufferHot" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="InvertedTriangle" Label="TBufferMid" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="Diamond" Label="TBufferCold" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
@@ -263,14 +291,14 @@
             Header="Hot and Cold tanks Energy balance"
             Grid.Row="6"
             Grid.RowSpan="5"
-            Grid.Column="3"
-                Grid.ColumnSpan="2"
+            Grid.Column="2"
+                Grid.ColumnSpan="1"
             Margin="20,0,0,0">
                 <chart:SfChart.PrimaryAxis>
                     <chart:TimeSpanAxis ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
                 <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Minimum="0" Interval="10" Maximum="100" EnableAutoIntervalOnZooming="False">
@@ -283,8 +311,11 @@
                     <chart:HorizontalLineAnnotation Name="PhaseHLine3"  CanDrag="True" DragCompleted="PhaseLine1_Dragged"  Width="2" CoordinateUnit="Axis" Y1="45"></chart:HorizontalLineAnnotation>
                     <chart:HorizontalLineAnnotation Name="PhaseHLine4" CanDrag="True"  DragCompleted="PhaseLine2_Dragged" Width="3" CoordinateUnit="Axis" Y1="65" Y2="90"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
+                <!-- Return Valve not yet simulated showing another curve -->
                 <chart:LineSeries LegendIcon="Diamond" Label="TReturnActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Label="TReturnForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
+                 <chart:LineSeries LegendIcon="Diamond" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Label="TColdTank" XBindingPath="ElapsedTime" YBindingPath="TCoolTank" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Label="ReturnValve" XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries> 
             </chart:SfChart>
         </Grid>
 
