--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -95,8 +95,8 @@
                     <TextBox Name="TextBox_NewPauseCoolingTime" GotFocus="NewPauseCoolingTimeTextBox_GotFocus"  IsReadOnly="True" Margin="15,0,0,0" Text="10"></TextBox>
             </StackPanel>
 
-            <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Monitoring" FontWeight="Bold"></TextBlock>
-
+          <!--  <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Monitoring" FontWeight="Bold"></TextBlock>
+-->
            
 
 <!-- delay timing chart -->
@@ -147,11 +147,13 @@
             <TextBox Name="PhaseDiffResult" Grid.Row="2" Background="Yellow" BorderThickness="0" Grid.Column="2" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="Diff = 5"></TextBox>
 
             <!-- parameter monitoring chart -->
-            <chart:SfChart  
-            Header="Parameter Monitoring"
-            Name="ChartParameters"    
-            Margin="0,10,0,0"
-           Grid.Row="11"
+            <Border Margin="5,5,0,5" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" Grid.Row="10" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="4">
+                <StackPanel Margin="5,5,5,5" Orientation="Vertical">
+                    <TextBlock Margin="5,0,0,0" Text="Monitoring" FontWeight="SemiBold"></TextBlock>
+                        <chart:SfChart  
+                       Name="ChartParameters"    
+                        Margin="0,10,0,0"
+                        Grid.Row="11"
             Grid.RowSpan="5"
             Grid.Column="0"
             Grid.ColumnSpan="4">
@@ -200,7 +202,8 @@
                 <chart:FastLineBitmapSeries/>
                --> 
           </chart:SfChart>
-
+            </StackPanel>
+            </Border>
             <!-- overlaying Button for Export -->
             <Button Name="ButtonExportParameterChart" Content="Export" Grid.Row="15" Grid.Column="2" Margin="30,0,0,25" Click="ButtonExportParameterChart_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Button>
             
@@ -221,14 +224,31 @@
             </StackPanel> -->
 
             <!-- state chart -->
-            <Border  BorderBrush="Gray" BorderThickness="0" CornerRadius="20" Grid.Row="0" Grid.RowSpan="8" Grid.Column="2" Grid.ColumnSpan="2">
-             <chart:SfChart  
-            Header="AOU / IMM Interaction"
-            Grid.Row="0"
+            <Border  BorderBrush="LightGray" BorderThickness="2" CornerRadius="5"  Grid.Row="0" Grid.RowSpan="10" Grid.Column="2" Grid.ColumnSpan="2">
+                <StackPanel Margin="5,5,5,5" Orientation="Vertical">
+                    <TextBlock Margin="5,5,5,5" FontWeight="SemiBold" Text="AOU / IMM Interaction"></TextBlock>
+                   
+                    <!--    <StackPanel Orientation="Vertical">
+                            <TextBlock Margin="2,30,0,0" FontSize="8" Text="Unknown"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="OpenEnd" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="EjectEnd" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="EjectBegin" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="OpenBegin" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="CoolingEnd" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="InjectionEnd" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="InjectionBegin" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="ColdAtMEntry" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="HotAtMEntry" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="Initial" FontSize="8"></TextBlock>
+                            <TextBlock Margin="2,10,0,0" Text="Idle" FontSize="8"></TextBlock>
+
+                        </StackPanel> -->
+                    <chart:SfChart  
+                        Grid.Row="0"
             Grid.RowSpan="8"
             Grid.Column="2"    
             Grid.ColumnSpan="2"
-            Margin="30,10,30,10">
+            Margin="20,0,20,0">
   <!--              <chart:SfChart.Behaviors>
                     <chart:ChartTrackBallBehavior></chart:ChartTrackBallBehavior>
                 </chart:SfChart.Behaviors>
@@ -245,9 +265,10 @@
                 
             <chart:StepLineSeries XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:StepLineSeries>
         </chart:SfChart>
+                                   </StackPanel>
             </Border>
 
-           
+  
 
             <!-- volume balance chart -->
             <chart:SfChart  
